--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -10,6 +10,9 @@ jobs:
   build:
 
     runs-on: windows-latest
+    
+    env: 
+      working-directory: ./src
 
     steps:
       - uses: actions/checkout@v2
