--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -11,8 +11,9 @@ jobs:
 
     runs-on: windows-latest
     
-    env: 
-      working-directory: ./src
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
       - uses: actions/checkout@v2
