--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -14,6 +14,9 @@ jobs:
     defaults:
       run:
         working-directory: ./src
+        
+    env:
+      AZURE_WEBAPP_PACKAGE_PATH: '.'
 
     steps:
       - uses: actions/checkout@v2
@@ -27,3 +30,5 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+      - name: Publish
+          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
