--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -1,4 +1,3 @@
-
 name: dotnet-build-test-publish
 
 on:
@@ -32,4 +31,4 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --verbosity normal
       - name: Publish
-          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
+        run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
