--- a/.github/workflows/azure-webapp-deploy.yml
+++ b/.github/workflows/azure-webapp-deploy.yml
@@ -1,8 +1,8 @@
 name: azure-webapp-deploy
 
-on:
-  release:
-    types: [published]
+on: workflow_dispatch
+#  release:
+#    types: [published]
 #  workflow_run:
 #    workflows: ["Build"]
 #    types: [completed]
