--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -38,7 +38,8 @@ jobs:
         run: dotnet test --no-restore --verbosity normal
       
       - name: Publish
-        run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+        run: dotnet publish -c Release 
+        #-o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
         
       - uses: azure/login@v1
         with:
