--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -17,7 +17,7 @@ jobs:
         
     env:
       AZURE_WEBAPP_NAME: HeatherPharmaWebApp          # set this to your application's name
-      AZURE_WEBAPP_PACKAGE_PATH: '.'                  # set this to the path to your web app project, defaults to the repository root
+      AZURE_WEBAPP_PACKAGE_PATH: './myapp'                  # set this to the path to your web app project, defaults to the repository root
       DOTNET_VERSION: '3.1.x'                         # set this to the dot net version to use
 
     steps:
@@ -38,8 +38,7 @@ jobs:
         run: dotnet test --no-restore --verbosity normal
       
       - name: Publish
-        run: dotnet publish -c Release 
-        #-o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        run: dotnet publish -c Release -o ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         
       - uses: azure/login@v1
         with:
@@ -50,4 +49,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          #package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
