--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -38,7 +38,7 @@ jobs:
         run: dotnet test --no-restore --verbosity normal
       
       - name: Publish
-        run: dotnet publish -c Release -o ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        run: dotnet publish -c Release -o ${{ github.workspace }}
         
       - uses: azure/login@v1
         with:
@@ -49,4 +49,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: ${{ github.workspace }}
