--- a/infra/webapp-template.json
+++ b/infra/webapp-template.json
@@ -4,7 +4,7 @@
     "parameters": {
         "webAppName": {
             "type": "string",
-            "defaultValue": "[concat('ASPNET-', uniqueString(resourceGroup().id))]",
+            "defaultValue": "[concat('DOTNET-', uniqueString(resourceGroup().id))]",
             "metadata": {
                 "description": "That name is the name of our application. It has to be unique. Type a name followed by your resource group name. (<name>-<resourceGroupName>)"
             }
