--- a/infra/webapp-parameters.json
+++ b/infra/webapp-parameters.json
@@ -3,7 +3,7 @@
     "contentVersion": "1.0.0.0",
     "parameters": {
         "webAppName": {
-            "value": "HeatherPharmaWebapp"
+            "value": "HeatherPharmaWebapp2"
         }
     }
 }
