--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -17,7 +17,7 @@ jobs:
         working-directory: ./src
         
     env:
-      AZURE_WEBAPP_NAME: HeatherPharmaWebApp          # set this to your application's name
+      AZURE_WEBAPP_NAME: dev-heather-pharma-webapp          # set this to your application's name
       AZURE_WEBAPP_PACKAGE_PATH: './myapp'                  # set this to the path to your web app project, defaults to the repository root
       DOTNET_VERSION: '3.1.x'                         # set this to the dot net version to use
 
