--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -39,6 +39,8 @@ jobs:
         run: dotnet publish -c Release -o ${{ github.workspace }}
         
   deploy:
+    
+    needs: [build]
 
     runs-on: windows-latest
     
