--- a/.github/workflows/dotnet-build-test-publish.yml
+++ b/.github/workflows/dotnet-build-test-publish.yml
@@ -1,9 +1,9 @@
 name: dotnet-build-test-deploy
 
-on: 
-  push:
+on:
+ workflow_dispatch:
+ push:
     branches: [main]
-workflow_dispatch
 
 jobs:
   build:
